# nighthawk-ios-wallet

./: .gitignore  .swiftlint.yml  .swiftlint_tests.yml  AI_CONTEXT.md  CODE_STRUCTURE.md  CONTRIBUTING_AI.md  README.md  crowdin.yml  swiftgen.yml  test_logs.swift
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
NighthawkWallet.xcodeproj/: project.pbxproj
docs/: Architecture.md  Darkfi_iOS_Architecture.md  README.md  alpha-testnet-connection.md  app-features.md  darkfi-integration.md  darkirc-ios.md  implementation-plan.md  security-threat-model.md
modules/: Package.resolved  Package.swift  swiftgen.yml
nighthawk/: NighthawkApp.swift
nighthawk/Configuration/: Info-mainnet.plist  Info-testnet.plist  NighthawkConfiguration.swift  mainnet.xcconfig  testnet.xcconfig
nighthawk/Utils/: Bindings.swift
nighthawk/en.lproj/: LaunchScreen.storyboard
nighthawkTests/: nighthawkTests.swift
nighthawkTests/UtilTests/: WalletStorageTests.swift
rust/: Cargo.toml
rust/darkfi-android-bridge/: Cargo.toml  README.md
rust/darkfi-android-bridge/src/: lib.rs
rust/darkfi-mobile-ffi/: Cargo.toml  README.md  build.rs  uniffi.toml
rust/darkfi-mobile-ffi/src/: birthday.rs  bootstrap.rs  dao.rs  darkfi_mobile_ffi.udl  darkirc_daemon.rs  lib.rs  memo.rs  mnemonic.rs  sync.rs  tokens.rs  tor.rs  transactions.rs  tx_inspect.rs
rust/darkfi-mobile-ffi/tests/: mnemonic_test.rs
scripts/: build-darkfi-mobile-ffi-ios.sh  build-darkirc-ios.sh  deploy-ios-device.sh
secant/: LaunchScreen.storyboard  NighthawkApp.swift  SecantApp.swift  secant-mainnet-Info.plist  secant-testnet-Info.plist
secant.xcodeproj/: project.pbxproj
secant/Models/: SyncStatusSnapshot.swift
secant/Resources/: Localizable.strings
secantTests/BackupFlowTests/: RecoveryPhraseDisplayReducerTests.swift
secantTests/HomeTests/: HomeTests.swift
secantTests/RecoveryPhraseValidationTests/: RecoveryPhraseValidationFlowFeatureFlagTests.swift
secantTests/RootTests/: AppInitializationTests.swift  RootTests.swift
secantTests/SettingsTests/: SettingsTests.swift
secantTests/UtilTests/: WalletStorageTests.swift
stealth/: NighthawkApp.swift  darkfi_wasm_stubs.c
stealth.xcodeproj/: project.pbxproj
stealth/DarkFi/: DarkfiChatController.swift  DarkircEmbeddedRunner.swift
stealthTests/BackupFlowTests/: RecoveryPhraseBackupTests.swift  RecoveryPhraseDisplayReducerTests.swift
stealthTests/ChatTests/: ChatTests.swift
stealthTests/DaoHubTests/: DaoHubTests.swift
stealthTests/HomeTests/: HomeTabBarUITests.swift  HomeTestSupport.swift  HomeTests.swift
(+488 files in other folders)
